
noinst_LTLIBRARIES = libvolume_id.la

INCLUDES = -DDEBUG

libvolume_id_la_SOURCES =				\
	dasd.h			dasd.c			\
	ext.h			ext.c			\
	fat.h			fat.c			\
	hfs.h			hfs.c			\
	highpoint.h		highpoint.c		\
	iso9660.h		iso9660.c		\
	jfs.h			jfs.c			\
	linux_raid.h		linux_raid.c		\
	linux_swap.h		linux_swap.c		\
	lvm.h			lvm.c			\
	luks.h			luks.c			\
	mac.h			mac.c			\
	msdos.h			msdos.c			\
	ntfs.h			ntfs.c			\
	reiserfs.h		reiserfs.c		\
	udf.h			udf.c			\
	ufs.h			ufs.c			\
	xfs.h			xfs.c			\
	logging.h					\
	util.h			util.c			\
	volume_id.h		volume_id.c
