
noinst_LTLIBRARIES = libvolume_id.la

INCLUDES = -DDEBUG

libvolume_id_la_SOURCES =				\
	ext.h			ext.c			\
	fat.h			fat.c			\
	hfs.h			hfs.c			\
	highpoint.h		highpoint.c		\
	isw_raid.h		isw_raid.c		\
	lsi_raid.h		lsi_raid.c		\
	via_raid.h		via_raid.c		\
	silicon_raid.h		silicon_raid.c		\
	nvidia_raid.h		nvidia_raid.c		\
	promise_raid.h		promise_raid.c		\
	iso9660.h		iso9660.c		\
	jfs.h			jfs.c			\
	linux_raid.h		linux_raid.c		\
	linux_swap.h		linux_swap.c		\
	lvm.h			lvm.c			\
	luks.h			luks.c			\
	mac.h			mac.c			\
	msdos.h			msdos.c			\
	ntfs.h			ntfs.c			\
	reiserfs.h		reiserfs.c		\
	udf.h			udf.c			\
	ufs.h			ufs.c			\
	xfs.h			xfs.c			\
	hpfs.h			hpfs.c			\
	romfs.h			romfs.c			\
	sysv.h			sysv.c			\
	cramfs.h		cramfs.c		\
	minix.h			minix.c			\
	ocfs.h			ocfs.c			\
	vxfs.h			vxfs.c			\
	logging.h					\
	util.h			util.c			\
	volume_id.h		volume_id.c
