
noinst_LTLIBRARIES = libvolume_id.la

INCLUDES = -DDEBUG

libvolume_id_la_SOURCES =	\
	ext.c			\
	fat.c			\
	hfs.c			\
	highpoint.c		\
	isw_raid.c		\
	lsi_raid.c		\
	via_raid.c		\
	silicon_raid.c		\
	nvidia_raid.c		\
	promise_raid.c		\
	iso9660.c		\
	jfs.c			\
	linux_raid.c		\
	linux_swap.c		\
	lvm.c			\
	luks.c			\
	mac.c			\
	msdos.c			\
	ntfs.c			\
	reiserfs.c		\
	udf.c			\
	ufs.c			\
	xfs.c			\
	hpfs.c			\
	romfs.c			\
	sysv.c			\
	cramfs.c		\
	minix.c			\
	ocfs.c			\
	vxfs.c			\
	logging.h		\
	util.h			\
	util.c			\
	volume_id.h		\
	volume_id.c
