
EXTRA_DIST = storage-policy-examples.fdi storage-skip-all.fdi \
	     storage-non-fixed.fdi match-cardreader.fdi \
	     match-USB-camera.fdi match-USB-mp3-player.fdi

confdir = $(DOCDIR)/conf
conf_DATA = storage-policy-examples.fdi storage-skip-all.fdi \
	    storage-non-fixed.fdi match-cardreader.fdi \
	    match-USB-camera.fdi match-USB-mp3-player.fdi
