

fdi20freedesktopdir = $(datadir)/hal/fdi/20freedesktop

dist_fdi20freedesktop_DATA = 		\
	sony_dsc.fdi			\
	6in1-card-reader.fdi		\
	lexar-media-cf-reader.fdi	\
	lucent-pcmcia-wireless.fdi	\
	jetflash-mp3-player.fdi         \
        ide-drives.fdi                  \
        usb-zip-drives.fdi



