
txtpolicydir = $(POLKIT_TXTSRC)

dist_txtpolicy_DATA =                              \
	storage-fixed-mount.policy                 \
	storage-fixed-mount-change-uid.policy	   \
	storage-removable-mount.policy             \
	storage-removable-mount-change-uid.policy  \
	power-suspend.policy                       \
	power-hibernate.policy                     \
	power-poweroff.policy                      \
	power-reboot.policy

clean-local :
	rm -f *~
