
txtpolicydir = $(POLKIT_TXTSRC)

dist_txtpolicy_DATA =                                     \
	hal-storage-fixed-mount.privilege                 \
	hal-storage-fixed-mount-change-uid.privilege	  \
	hal-storage-removable-mount.privilege             \
	hal-storage-removable-mount-change-uid.privilege  \
	hal-power-suspend.privilege                       \
	hal-power-hibernate.privilege                     \
	hal-power-poweroff.privilege                      \
	hal-power-reboot.privilege

clean-local :
	rm -f *~
