## Process this file with automake to produce Makefile.in

scriptdir = $(libdir)/hal/scripts

script_SCRIPTS =					\
	hal-system-power-suspend-freebsd		\
	hal-system-power-shutdown-freebsd		\
	hal-system-power-reboot-freebsd			\
	hal-system-lcd-get-brightness-freebsd		\
	hal-system-lcd-set-brightness-freebsd		\
	hal-system-power-set-power-save-freebsd		\
	hal-system-storage-unmount-freebsd		\
	hal-system-storage-eject-freebsd		\
	hal-system-storage-cleanup-mountpoints-freebsd

EXTRA_DIST = $(script_SCRIPTS)
